# python_continuous_Integration_sample

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
database/: base.py  config.py  memo.py
settings/: __init__.py  base_setting.py
tests/: conftest.py  test_db.py  test_obvious.py
